--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./styles/partials/page-landing.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
     <title>Proffy | Sua plataforma de estudos online</title>
+    
+    <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
+    
 </head>
 <body id="page-landing">
    
