Adicionar JS. obs: layout incompleto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>Proffy | Sua plataforma de estudos online</title>
     
     <link rel="shortcut icon" href="/images/favicon.png" type="image/png">
-    
+    <script src="./scripts/main.js" defer></script>
+
 </head>
 <body id="page-landing">
    
